--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,11 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nice_nano_v2
+    shield: sofle_left
+    artifact-name: sofle_left_with_studio
+  - board: nice_nano_v2
+    shield: sofle_right
+    artifact-name: sofle_right_with_studio
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
