--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,7 @@ include:
   - board: nice_nano_v2
     shield: sofle_left
     artifact-name: sofle_left_with_studio
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: sofle_right
     artifact-name: sofle_right_with_studio
