--- a/build.yaml
+++ b/build.yaml
@@ -20,12 +20,12 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: sofle_left
+    shield: sofle_left nice_oled
     artifact-name: sofle_left_with_studio
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
-    shield: sofle_right
+    shield: sofle_right nice_oled
     artifact-name: sofle_right_with_studio
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
