--- a/build.yaml
+++ b/build.yaml
@@ -29,3 +29,5 @@ include:
     artifact-name: sofle_right_with_studio
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
+  - board: nice_nano_v2
+    shield: settings_reset
